--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <input type="password" class="form-control" id="password" placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary mb-2">View My Cellar</button>
+            <p>Don't have an account?
+                <button class="btn btn-primary mb-2" id="create-account">Create Account</button>
+            </p>
         </form>
     </nav>
 </header>
