more broken code

--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
                         </div>
                         <div class="col-4">
                             <label for="#input-wine-year">Select the vintage year:</label>
-                            <select multiple class="form-control" id="#input-wine-year">
-                                <option>2018</option>
-                                <option>2017</option>
-                                <option>2016</option>
-                                <option>2015</option>
+                            <select multiple class="form-control" id="input-wine-year">
+                                <option value="2018">2018</option>
+                                <option value="2017">2017</option>
+                                <option value="2016">2016</option>
+                                <option value="2015">2015</option>
                             </select>
                         </div>
                     </div>
