added click handlers in winesearch.js

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <label for="password-input" class="sr-only">Password</label>
             <input type="password" class="form-control" id="password-input" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-primary mb-2">View My Cellar</button>
-        <p>Don't have an account?
-            <button class="btn btn-primary mb-2" id="create-account-toggle">Create Account</button>
-        </p>
+        <button type="submit" class="btn btn-lg btn-primary btn-block" id="sign-in">View My Cellar</button>
+        <p>Don't have an account?</p>
+        <button class="btn btn-lg btn-primary btn-block" id="create-account-toggle">Create Account</button>
+
     </div>
     <div id="create-user-div">
         <div class="form-group mb-2" id="username-create">
@@ -50,7 +50,7 @@
             <label for="password-input-create" class="sr-only">Password</label>
             <input type="password" class="form-control" id="password-input-create" placeholder="Password">
         </div>
-        <button type="submit" class="btn btn-primary mb-2">View My Cellar</button>
+        <button type="submit" class="btn btn-lg btn-primary btn-block" id="create-user">Create My Cellar</button>
         <p>Already have an account?
             <button class="btn btn-lg btn-primary btn-block" type="submit" id="sign-in-toggle">Sign in</button>
         </p>
