added text on sign in pages

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
     <div id="sign-in-div">
-
+        <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
         <div class="form-group mb-2" id="username">
             <label for="username-input" class="sr-only">Username</label>
             <input type="text" class="form-control" id="username-input" placeholder="email@example.com">
@@ -47,6 +47,7 @@
 
     </div>
     <div id="create-user-div">
+        <h1 class="h3 mb-3 font-weight-normal">Create an Account</h1>
         <div class="form-group mb-2" id="users-name">
             <label for="name-field" class="sr-only">Your Name</label>
             <input type="text" class="form-control" id="name-field" placeholder="John Doe">
