writing to database

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 
                     </div>
-                    <a href="profile.html"><button type="submit" class="btn btn-primary mb-2">View My Cellar</button></a>
+                    <a href="#"><button type="submit" class="btn btn-primary mb-2" id="view">View My Cellar</button></a>
                 </div>
                 <div class="col-md-8">
                     <h3>Find Your Wine</h3>
