--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
             <label for="password-input-create" class="sr-only">Password</label>
             <input type="password" class="form-control" id="password-input-create" placeholder="Password" required>
         </div>
-        <button type="submit" class="btn btn-lg btn-primary btn-block" id="create-user">Create My
-                Cellar</button>
+        <button type="submit" class="btn btn-lg btn-primary btn-block" id="create-user">Create My Cellar
+        </button>
         <p>Already have an account?
             <button class="btn btn-lg btn-primary btn-block" type="submit" id="sign-in-toggle">Sign in</button>
         </p>
@@ -90,7 +90,7 @@
 
 
                     </div>
-                    <a href="#"><button type="submit" class="btn btn-primary mb-2" id="view">View My Cellar</button></a>
+                    <a href="cellar.html"><button type="submit" class="btn btn-primary mb-2">View My Cellar</button></a>
                 </div>
                 <div class="col-md-8">
                     <h3>Find Your Wine</h3>
@@ -139,6 +139,9 @@
             </div>
         </div>
         <script src="assets/javascript/winesearch.js"></script>
+        <script>
+            localStorage.setItem("currentPage", "index");
+        </script>
 </body>
 
 </html>
