--- a/profile.html
+++ b/profile.html
@@ -13,13 +13,10 @@
     <style></style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
-
-
-
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../wine-cellar/assets/css/style.css">
@@ -159,36 +156,10 @@
             </div>
         </div>
     </div>
-    <div id="main-page">
-        <div class="container-fluid">
-            <div class="jumbotron">
-                <h1>My Wine Cellar</h1>
-            </div>
-            <a href="index.html"><button class="btn btn-lg btn-primary" id="switch">Home Page</button></a>
-        </div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-12">
-                    <h2>In My Cellar</h2>
-                    <div class="cellar-highlights">
-                        <table class="table table-sm table-hover table-striped" id='wine-table'>
-                            <thead>
-                                <tr>
-                                    <th class="col">Wine Name</th>
-                                    <th class="col">Region</th>
-                                    <th class="col">Year</th>
-                                    <th class="col">Color</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script src="assets/javascript/winesearch.js"></script>
-    </div>
+    <script src="assets/javascript/winesearch.js"></script>
+    <script>
+        localStorage.setItem("currentPage", "profile");
+    </script>
 </body>
 
 </html>
