--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-
+    <link rel="stylesheet" href="../wine-cellar/assets/css/reset.css">
     <meta charset="UTF-8">
-    <title>Getcher Wine</title>
+    <title>My Wine Cellar App</title>
 
     <!-- Firebase Reference -->
     <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
@@ -64,7 +64,7 @@
         </p>
     </div>
     <div id="main-page">
-        <div class="container-fluid">
+        <div class="container-fluid" id="header">
             <div class="jumbotron">
                 <h1>My Wine Cellar</h1>
             </div>
