working cellar and search

--- a/cellar.html
+++ b/cellar.html
@@ -42,7 +42,7 @@
                                     <th scope="col">Wine Name</th>
                                     <th scope="col">Wine Vintage</th>
                                     <th scope="col">Bottles</th>
-                                    <th scope="col">Add to Cellar</th>
+                                    <th scope="col">Location</th>
                                 </tr>
                             </thead>
                             <tbody id="wineCellar">
