added fill home page function and buttons instaed of checkboxes in profile

--- a/profile.html
+++ b/profile.html
@@ -97,59 +97,19 @@
                 </div>
             </div>
             <h4>My Interests</h4>
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="form-group mb-2" id="interests-color">
-                        <label for="select-wine-color">Select Wine Color: </label>
-                    </div>
-                    <div class="form-group mb-2" id="interests-color">
-                        <label class="checkbox-inline">
-                            <input type="checkbox" value="">Red Wine</Option>
-                        </label>
-                        <label class="checkbox-inline">
-                            <input type="checkbox" value="">White Wine</Option>
-                        </label>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="form-group mb-2" id="interests-type">
-                        <label for="select-wine-color">Select Wine Type: </label>
-                    </div>
-                    <div class="form-group mb-2" id="interests-chardonnay">
-                        <label class="checkbox-inline">
-                            <input type="checkbox" value="">Chardonnay</Option>
-                        </label>
-                    </div>
-                    <div class="form-group mb-2" id="interests-pinot-grigio">
-                        <label class="checkbox-inline">
-                            <input type="checkbox" value="">Pinot-Grigio</Option>
-                        </label>
-                    </div>
-                    <div class="form-group mb-2" id="interests-sauvignon-blanc">
-                        <label class="checkbox-inline">
-                            <input type="checkbox" value="">Sauvignon Blanc</Option>
-                        </label>
-                    </div>
-                    <div class="form-group mb-2" id="interests-pinot-noir">
-                        <label class="checkbox-inline">
-                            <input type="checkbox" value="">Pinot Noir</Option>
-                        </label>
-                    </div>
-                    <div class="form-group mb-2" id="interests-merlot">
-                        <label class="checkbox-inline">
-                            <input type="checkbox" value="">Merlot</Option>
-                        </label>
-                    </div>
-                    <div class="form-group mb-2" id="interests-cabernet">
-                        <label class="checkbox-inline">
-                            <input type="checkbox" value="">Cabernet Sauvignon</Option>
-                        </label>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <button id="update-profile">Update</button>
-                </div>
-            </div>
+            <button class="interest-button btn btn-md btn-primary">Whites</button>
+            <button class="interest-button btn btn-md btn-primary">Reds</button>
+            <button class="interest-button btn btn-md btn-primary">Chardonnay</button>
+            <button class="interest-button btn btn-md btn-primary">Pinot-Grigio</button>
+            <button class="interest-button btn btn-md btn-primary">Sauvignon Blanc</button>
+            <button class="interest-button btn btn-md btn-primary">Pinot Noir</button>
+            <button class="interest-button btn btn-md btn-primary">Merlot</button>
+            <button class="interest-button btn btn-md btn-primary">Cabernet Sauvignon</button>
+            <button class="interest-button btn btn-md btn-primary">Chianti</button>
+            <button class="interest-button btn btn-md btn-primary">Sparkling</button>
+            <button class="interest-button btn btn-md btn-primary">Oaky</button>
+            <button class="interest-button btn btn-md btn-primary">Dry</button>
+            <button class="interest-button btn btn-md btn-primary">Sweet</button>
             <div class="row">
                 <div class="col-lg-8" id="view-cellar"></div>
                 <div class="col-lg-4" id="view-graph"></div>
