updated index.html to show correct table head in in my cellar

--- a/index.html
+++ b/index.html
@@ -78,10 +78,8 @@
                         <table class="table table-sm table-hover table-striped" id='wine-table'>
                             <thead>
                                 <tr>
-                                    <th class="col">Wine Name</th>
-                                    <th class="col">Region</th>
-                                    <th class="col">Year</th>
-                                    <th class="col">Color</th>
+                                    <th scope="col">Wine Name</th>
+                                    <th scope="col">Varietal</th>
                                 </tr>
                             </thead>
                             <tbody>
