added profile button on home page

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <h1>My Wine Cellar</h1>
             </div>
             <button class="btn btn-lg btn-primary" id="logout">Logout</button>
+            <a href="profile.html"><button class="btn btn-lg btn-primary" id="profile">Profile</button></a>
         </div>
         <div class="container-fluid">
             <div class="row">
