added wines category to each user in database

--- a/profile.html
+++ b/profile.html
@@ -96,20 +96,20 @@
                     <button type="submit" class="btn btn-lg btn-primary btn-block" id="reset-credentials">Reset</button>
                 </div>
             </div>
-            <h4>My Interests</h4>
-            <button class="interest-button btn btn-md btn-primary">Whites</button>
-            <button class="interest-button btn btn-md btn-primary">Reds</button>
-            <button class="interest-button btn btn-md btn-primary">Chardonnay</button>
-            <button class="interest-button btn btn-md btn-primary">Pinot-Grigio</button>
-            <button class="interest-button btn btn-md btn-primary">Sauvignon Blanc</button>
-            <button class="interest-button btn btn-md btn-primary">Pinot Noir</button>
-            <button class="interest-button btn btn-md btn-primary">Merlot</button>
-            <button class="interest-button btn btn-md btn-primary">Cabernet Sauvignon</button>
-            <button class="interest-button btn btn-md btn-primary">Chianti</button>
-            <button class="interest-button btn btn-md btn-primary">Sparkling</button>
-            <button class="interest-button btn btn-md btn-primary">Oaky</button>
-            <button class="interest-button btn btn-md btn-primary">Dry</button>
-            <button class="interest-button btn btn-md btn-primary">Sweet</button>
+            <h4>My Interests <span id="interest-directions">click to select interests</span></h4>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Whites</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Reds</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Chardonnay</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Pinot-Grigio</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Sauvignon Blanc</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Pinot Noir</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Merlot</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Cabernet Sauvignon</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Chianti</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Sparkling</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Oaky</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Dry</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no">Sweet</button>
             <div class="row">
                 <div class="col-lg-8" id="view-cellar"></div>
                 <div class="col-lg-4" id="view-graph"></div>
