persistence for profile preferences

--- a/profile.html
+++ b/profile.html
@@ -97,19 +97,19 @@
                 </div>
             </div>
             <h4>My Interests <span id="interest-directions">click to select interests</span></h4>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Whites</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Reds</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Chardonnay</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Pinot-Grigio</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Sauvignon Blanc</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Pinot Noir</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Merlot</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Cabernet Sauvignon</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Chianti</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Sparkling</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Oaky</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Dry</button>
-            <button class="interest-button btn btn-md btn-primary" clicked="no">Sweet</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="whites" id="whites">Whites</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="reds" id="reds">Reds</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="chardonnay" id="chardonnay">Chardonnay</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="pinot-grigio" id="pinot-grigio">Pinot-Grigio</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="saugignon-blanc" id="saugignon-blanc">Sauvignon Blanc</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="pinot-noir" id="pinot-noir">Pinot Noir</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="merlot" id="merlot">Merlot</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="cabernet-sauvignon" id="cabernet-sauvignon">Cabernet Sauvignon</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="chianti" id="chianti">Chianti</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="sparkling" id="sparkling">Sparkling</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="oaky" id="oaky">Oaky</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="dry" id="dry">Dry</button>
+            <button class="interest-button btn btn-md btn-primary" clicked="no" preference-name="sweet" id="sweet">Sweet</button>
             <div class="row">
                 <div class="col-lg-8" id="view-cellar"></div>
                 <div class="col-lg-4" id="view-graph"></div>
