button bugs fixed

--- a/cellar.html
+++ b/cellar.html
@@ -29,7 +29,8 @@
             <div class="jumbotron">
                 <h1>My Wine Cellar</h1>
             </div>
-            <a href="index.html"><button class="btn btn-lg btn-primary" id="switch">Home Page</button></a>
+            <button class="btn btn-lg btn-primary" id="logout">Logout</button>
+            <a href="index.html"><button class="btn btn-lg btn-primary" id="switch">Home</button></a>
         </div>
         <div class="container-fluid">
             <div class="row">
