--- a/profile.html
+++ b/profile.html
@@ -67,7 +67,7 @@
             <h1>My Profile Page</h1>
         </div>
         <button class="btn btn-lg btn-primary" id="logout-profile">Logout</button>
-        <a href="index.html"><button class="btn btn-lg btn-primary" id="switch">Home Page</button></a>
+        <a href="index.html"><button class="btn btn-lg btn-primary" id="switch">Home</button></a>
         <div class="container-fluid">
             <h4>My Profile Pic</h4>
             <div class="row">
@@ -80,7 +80,7 @@
                     <div class="form-group mb-2" id="change-profile-image">
                         <label for="change-profile-image">Change Profile Image</label>
                         <input type="file" class="form-control-file" id="change-profile-image">
-                    </div>
+                    </div><a class="load-pic">Add Pic to Profile</a>
                 </div>
                 <div class="col-lg-4">
                     <h4>My Credentials</h4>
