Working wine search, need to integrate zip into search bar, and need to get store inventory

--- a/cellar.html
+++ b/cellar.html
@@ -44,6 +44,7 @@
                                     <th scope="col">Wine Vintage</th>
                                     <th scope="col">Bottles</th>
                                     <th scope="col">Location</th>
+                                    <th scope="col">Uncork</th>
                                 </tr>
                             </thead>
                             <tbody id="wineCellar">
