--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     <th scope="col">Varietal</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="rows-to-update">
                             </tbody>
                         </table>
 
