--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 </select>
                             </div>
                         </div>
-                        <button id="run-search" type="submit" class="btn btn-primary mb-2">Search Wines</button>
+                        <button id="run-search" type="submit" class="btn btn-primary mb-2 mt-2">Search Wines</button>
                         <hr>
                     </form>
                     <div class="row">
