--- a/profile.html
+++ b/profile.html
@@ -67,7 +67,7 @@
             <h1>My Profile Page</h1>
         </div>
         <button class="btn btn-lg btn-primary" id="logout-profile">Logout</button>
-        <a href="index.html"><button class="btn btn-lg btn-primary" id="switch">Home Page</button></a>
+        <a href="index.html"><button class="btn btn-lg btn-primary" id="switch">Home</button></a>
         <a href="cellar.html"><button class="btn btn-lg btn-primary" id="cellar-from-profile">View My Cellar</button></a>
         <div class="container-fluid">
             <h4>My Profile Pic</h4>
